--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header>
       <div class="inner-wrapper">
         <h1>Mozilla Study Group Events</h1>
-        <a class="button" title="Add a new event report" href="http://goo.gl/forms/wDc7b8AqI3">+ Add Event Report</a>
+        <a class="button" title="Add a new event report" href="https://goo.gl/forms/ZTxdAx0jTxtefBfH3">+ Add Event Report</a>
       </div>
     </header>
 
