update index missed a variable

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <span class="event-date"><span class="value">March 16, 2016</span></span>
 
           <h1>
-            Event at <span class="sg-name"><span class="value">Mozilla Rio Club</span></span>
+            Event at <span class="sg-name"><span class="value">Mozilla Rio Study Group</span></span>
           </h1>
 
           <div class="left-col">
@@ -157,13 +157,13 @@
               <img src=""/>
             </div>
 
-            <h2 id="sg-location">Club Location</h2>
+            <h2 id="sg-location">Study Group Location</h2>
             <p>
               <span heading="sg-city" class="event-city"><span class="value"></span></span><br/>
-              <span heading="sg-country" class="club-country"><span class="value"></span></span>
+              <span heading="sg-country" class="sg-country"><span class="value"></span></span>
             </p>
 
-            <h2 id="sg-organizer">Club Organizer</h2>
+            <h2 id="sg-organizer">Study Group Organizer</h2>
             <div class="info-grop">
               <div heading="sg-organizer" class="sg-organizer">
                 <span class="value"></span>
