--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </div>
     <header>
       <div class="inner-wrapper">
-	<button class="w3-button w3-white w3-xlarge" onclick="w3_open()">&#9776;</button>
+	<button class="w3-button w3-olive w3-xlarge" onclick="w3_open()">&#9776;</button>
         <h1>Mozilla Study Group Events</h1>
 <!--        <a class="button" title="Add a new event report" href="https://goo.gl/forms/ZTxdAx0jTxtefBfH3">+ Add Event Report</a> -->
       </div>
